attempt to fix all images on mobile

--- a/default.css
+++ b/default.css
@@ -24,7 +24,6 @@ i {
 }
 
 img {
-    object-fit: cover;
     width: 80%;
     height: auto;
     max-width: 80vw;
